--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/stack": "^6.3.17",
     "expo": "~49.0.8",
+    "expo-dev-client": "~2.4.8",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.12",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.4",
+    "react-native-screens": "^3.25.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
   },
+  "autolinking": true,
   "private": true
 }
